# upc-test

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: cd-production.yaml  cd-staging.yaml  ci.yaml  cron-tasks.yaml  reusable-build-test.yaml  reusable-pre-commit.yaml
badges/: coverage.json
src/pkg_95120/: run.py
tests/: test_run.py
tests/files/: invalid-yaml.yaml  pre-commit-config.yaml
