[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel" ]

[project]
name = "pkg-95120"
version = "1.1.8"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "developers", email = "developers@tagdots.com" },
]
requires-python = ">=3.12.10"
classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "click==8.3.3",
  "gitpython==3.1.50",
  "pygithub==2.9.1",
  "pyyaml==6.0.3",
  "ulid-py==1.1",
]
optional-dependencies.local = [
  "commitizen",
  "pre-commit",
]
optional-dependencies.test = [
  "build",
  "coverage",
  "flake8",
  "isort",
  "pyscan-rs",
  "pytest",
  "twine",
]
urls.Changelog = "https://www.notavailable.com/changelog"
urls.Documentation = "https://www.notavailable.com/doc"
urls.Homepage = "https://www.notavailable.com"
scripts.pkg-95120 = "pkg_95120.run:main"

[dependency-groups]
test = [
  "coverage[toml]",
]

[tool.setuptools]
dynamic.version = { attr = "src.pkg_95120.__init__" }
packages.find.where = [ "src" ]

[tool.pyproject-fmt]
column_width = 125
indent = 2
keep_full_version = true

[tool.coverage]
run.branch = true
run.command_line = "-m pytest -vs"
run.include = [ "src/pkg_95120/*" ]
run.omit = [ "tests/*" ]
report.fail_under = 80
report.include = [ "src/pkg_95120/*" ]
report.show_missing = false
source = [ "." ]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = false
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
  "src/pkg_95120/__init__.py:__version__",
]
version_provider = "pep621"
version_scheme = "pep440"
